--- a/test/fixtures/templates.yml
+++ b/test/fixtures/templates.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  manager: one
   name: MyString
+  newsletter: one
 
 two:
-  manager: two
   name: MyString
+  newsletter: two
